--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://{AWS RDS Endpoint}/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-    username: {RDS Mysql Admin id}
-    password: {rds Mysql Admin password}
+    url: jdbc:mysql://ls-666e6634dde537c7039d54e835178d57878b069f.cgw31hjdgukx.ap-northeast-2.rds.amazonaws.com/serverDB?createDatabaseIfNotExist=true
+    username: ${MYSQL-USERNAME}
+    password: ${MYSQL-PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
