--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./server
 
     steps:
     - uses: actions/checkout@v3
@@ -31,13 +33,15 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        cache: 'gradle'
+        
     - name: Add permission
       run: chmod +x ./gradlew
+      working-directory: ${{ env.working-directory }}
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
-
+      run: ./gradlew clean build --debug
+      working-directory: ${{ env.working-directory }}
+        
 
 
  # build한 후 프로젝트를 압축합니다.
