--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,3 +63,13 @@ jobs:
       run: aws s3 cp --region ap-northeast-2 ./mainproject024-deploy.zip s3://$S3_BUCKET_NAME/mainproject024-deploy.zip
       
       
+    # CodeDeploy에게 배포 명령을 내립니다.
+    - name: Code Deploy
+      run: >
+        aws deploy create-deployment --application-name mainprojectCD
+        --deployment-config-name CodeDeployDefault.AllAtOnce
+        --deployment-group-name Codedeploy-githubaction
+        --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=mainproject024-deploy.zip
+        
+        
+        
