--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -69,8 +69,7 @@ jobs:
         aws deploy create-deployment --application-name mainprojectCD
         --deployment-config-name CodeDeployDefault.AllAtOnce
         --deployment-group-name Codedeploy-githubaction
-        --s3-location "bucket=$S3_BUCKET_NAME,bundleType=zip,key=mainproject024-deploy.zip"
-        --description "This throwns an error"
+        --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=mainproject024-deploy.zip
         
         
         
