--- a/server/appspec.yml
+++ b/server/appspec.yml
@@ -1,18 +1,20 @@
 version: 0.0
 os: linux
 files:
-  - source:  /
-    destination: /home/ubuntu/action
-    overwrite: yes
+  - source: /
+    destination: /home/ec2-user/build/
 
 permissions:
   - object: /
-    pattern: "**"
-    owner: ubuntu
-    group: ubuntu
-
+    owner: ec2-user
+    group: ec2-user
+    mode: 755
+    
 hooks:
-  ApplicationStart:
-    - location: scripts/deploy.sh
-      timeout: 60
-      runas: ubuntu
+  BeforeInstall:
+    - location: scripts/deploy-before.sh
+      runas: ec2-user
+//   ApplicationStart:
+//     - location: scripts/deploy.sh
+//       timeout: 60
+//       runas: ec2-user
