--- a/server/appspec.yml
+++ b/server/appspec.yml
@@ -14,7 +14,7 @@ hooks:
   BeforeInstall:
     - location: scripts/deploy-before.sh
       runas: ec2-user
-//   ApplicationStart:
-//     - location: scripts/deploy.sh
-//       timeout: 60
-//       runas: ec2-user
+  ApplicationStart:
+    - location: scripts/deploy.sh
+      timeout: 60
+      runas: ec2-user
