--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -67,7 +67,7 @@ jobs:
       run: >
         aws deploy create-deployment
         --application-name mainprojectCD
-        --deployment-config-name CodeDeployDefault.OneAtATime
+        --deployment-config-name CodeDeployDefault.AllAtOnce
         --deployment-group-name Codedeploy-githubaction
         --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=mainproject024-deploy.zip
         
