--- a/server/appspec.yml
+++ b/server/appspec.yml
@@ -2,19 +2,19 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/build/
+    destination: /home/ubuntu/build/
 
 permissions:
   - object: /
-    owner: ec2-user
-    group: ec2-user
+    owner: ubuntu
+    group: ubuntu
     mode: 755
     
 hooks:
   BeforeInstall:
     - location: scripts/deploy-before.sh
-      runas: ec2-user
+      runas: ubuntu
   ApplicationStart:
     - location: scripts/deploy.sh
       timeout: 60
-      runas: ec2-user
+      runas: ubuntu
