--- a/server/appspec.yml
+++ b/server/appspec.yml
@@ -1,19 +1,17 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /home/ubuntu/build/
+  - source:  /
+    destination: /home/ubuntu/action
+    overwrite: yes
 
 permissions:
   - object: /
+    pattern: "**"
     owner: ubuntu
     group: ubuntu
-    mode: 755
-    
+
 hooks:
-  BeforeInstall:
-    - location: scripts/deploy-before.sh
-      runas: ubuntu
   ApplicationStart:
     - location: scripts/deploy.sh
       timeout: 60
