--- a/server/appspec.yml
+++ b/server/appspec.yml
@@ -13,6 +13,6 @@ permissions:
 
 hooks:
   ApplicationStart:
-    - location: scripts/deploy.sh
-      timeout: 60
+    - location: deploy.sh
+      timeout: 100
       runas: ubuntu
