feat : entity : {Member, Playlist, Comment, Song, Like}

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
+
+
 	// gson
 	implementation 'com.google.code.gson:gson'
 
@@ -49,6 +51,8 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+
+	runtimeOnly 'com.h2database:h2'
 
 }
 
