--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,6 +40,9 @@ jobs:
       run: ls -la
     - name: Check print working directory
       run: pwd
+    - name: Find jar file
+      run: find . -name "SNAPSHOT.jar"
+      
 
     # Access Key와 Secret Access Key를 통해 권한을 확인합니다.
     # 아래 코드에 Access Key와 Secret Key를 직접 작성하지 않습니다.
