--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,6 +68,6 @@ jobs:
         host: ${{ secrets.LIGHTSAIL_HOST }}
         username: ${{env.LIGHTSAIL_USERNAME}}
         key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-        script: java -jar ./server/build/libs server-0.0.1-SNAPSHOT.jar
+        script: java -jar ./server/build/libs/server-0.0.1-SNAPSHOT.jar
         
         
