--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,13 +62,17 @@ jobs:
         source: ${{ env.working-directory }}
         target: ./
 
+
+    # 어플리케이션 실행 될 때 까지 대기
+    - name: background process
+      run: for attempt in {1..30}; do sleep 1; if <test-command>; then echo ready; break; fi; echo waiting...; done 
+      
     - name: start java process background
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.LIGHTSAIL_HOST }}
         username: ${{env.LIGHTSAIL_USERNAME}}
         key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-        run: for attempt in {1..40}; do sleep 1; if <test-command>; then echo ready; break; fi; echo waiting...; done 
         script: nohup java -jar ./server/build/libs/server-0.0.1-SNAPSHOT.jar &
                 
     
