--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -70,7 +70,16 @@ jobs:
         key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
         script: |
                 nohup java -jar ./server/build/libs/server-0.0.1-SNAPSHOT.jar &
-                for attempt in {1..30}; do sleep 1; if <test-command>; then echo ready; break; fi; echo waiting...; done 
+                for attempt in {1..20}
+                do sleep 1
+                if <test-command>
+                then echo ready
+                break
+                fi
+                echo waiting...
+                done
+        
+
                 
     
     # sudo kill -9 종료시킬 PID 번호로 어플리케이션 강제 종료 가능
