--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,8 +68,7 @@ jobs:
         host: ${{ secrets.LIGHTSAIL_HOST }}
         username: ${{env.LIGHTSAIL_USERNAME}}
         key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-        script: |
-                nohup java -jar ./server/build/libs/server-0.0.1-SNAPSHOT.jar &
+        script: nohup java -jar ./server/build/libs/server-0.0.1-SNAPSHOT.jar &
     
     # sudo kill -9 종료시킬 PID 번호로 어플리케이션 강제 종료 가능
     - name: Check jar PID 
