--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,8 +1,8 @@
 name: Java CI with Gradle
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  #pull_request:
+  #branches: [ "main" ]
   push:
     branches: [ "main" ]
 
