--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -8,7 +8,8 @@
     "plugin:react/recommended",
     "plugin:import/recommended",
     "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "eslint-config-prettier"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -19,7 +20,6 @@
   },
   "rules": {
     "react/react-in-jsx-scope": 0,
-    "react/jsx-uses-react": 0,
-    "prettier/prettier": ["error", { "singleQuote": true }]
+    "react/jsx-uses-react": 0
   }
 }
