--- a/server/build.gradle
+++ b/server/build.gradle
@@ -54,6 +54,12 @@ dependencies {
 
 	runtimeOnly 'com.h2database:h2'
 
+	implementation 'org.webjars:webjars-locator-core'
+	implementation 'org.webjars:sockjs-client:1.0.2'
+	implementation 'org.webjars:stomp-websocket:2.3.3'
+	implementation 'org.webjars:bootstrap:3.3.7'
+	implementation 'org.webjars:jquery:3.1.1-1'
+
 }
 
 tasks.named('test') {
