--- a/server/build.gradle
+++ b/server/build.gradle
@@ -58,6 +58,11 @@ dependencies {
 
 	runtimeOnly 'com.h2database:h2'
 
+
+	// Mapstruct
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
 }
 
 tasks.named('test') {
