--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -71,7 +71,7 @@ jobs:
         host: ${{ secrets.LIGHTSAIL_HOST }}
         username: ${{env.LIGHTSAIL_USERNAME}}
         key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-        script: nohup java -jar ./server/build/libs/server-0.0.1-SNAPSHOT.jar > ./output.log 2>&1 &
+        script: nohup java -jar ./server/build/libs/server-0.0.1-SNAPSHOT.jar --spring.profiles.active=local > ./output.log 2>&1 &
         
     # script: nohup java -jar ./server/build/libs/server-0.0.1-SNAPSHOT.jar > nohup.out 2 > nohup.err < /dev/null &   
     
