--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,11 +1,10 @@
 name: Java CI with Gradle
 
 on:
-  #pull_request:
-  #branches: [ "main" ]
-  push:
+  pull_request:
     branches: [ "main" ]
-  #test
+  #push:
+    #branches: [ "main" ]
 
 
 permissions:
