--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,6 +22,46 @@
   "rules": {
     "react/react-in-jsx-scope": 0,
     "react/jsx-uses-react": 0,
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "import/no-unresolved": "off",
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "sibling",
+          "parent",
+          "index",
+          "unknown"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "{react*,react*/**}",
+            "group": "external",
+            "position": "before"
+          },
+          {
+            "pattern": "@pages/**",
+            "group": "sibling"
+          },
+          {
+            "pattern": "@components/**",
+            "group": "sibling"
+          },
+          {
+            "pattern": "@styles/**",
+            "group": "unknown"
+          }
+        ],
+        "pathGroupsExcludedImportTypes": ["react", "unknown"],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
   }
 }
