--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-NODE_PATH=src/
-REACT_APP_YOUTUBE_API_KEY=AIzaSyBbbbqggVeETPbPGQQRmgqK_b9orPwNHIY
+REACT_APP_REDIRECT_URL=http://ec2-13-124-65-151.ap-northeast-2.compute.amazonaws.com:8080/oauth2/authorization/google
+REACT_APP_AUTH_URL=http://ec2-13-124-65-151.ap-northeast-2.compute.amazonaws.com:8080/members/auth
