--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "slick-carousel": "^1.8.1",
     "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.8",
+    "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
