--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@stomp/stompjs": "^7.0.0",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
