--- a/server/build.gradle
+++ b/server/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
+	// h2db
+	runtimeOnly 'com.h2database:h2'
+
 }
 
 tasks.named('test') {
