--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,10 @@
     "webpack-bundle-analyzer": "^4.8.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.config.dev.js",
+    "start": "react-scripts start",
     "build:dev": "webpack --config webpack.config.dev.js",
     "build:prod": "webpack --config webpack.config.prod.js",
+    "dev": "webpack-dev-server --open --config webpack.config.dev.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
