--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
+    "react-page-visibility": "^7.0.0",
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
